# ai-orchestra

./: .gitignore  .npmignore  CHANGELOG.md  GRANTS.md  LICENSE  MIGRATION.md  README.md  RUN.md  VERSION  _v1.x-backlog.md  _v2.x-backlog.md  _v3.x-backlog.md  package.json
.github/workflows/: release.yml
_documentation/: AI_LEARNINGS.md
_presentation/: AI_ORCHESTRA_OVERVIEW.md  NOTEBOOKLM_PROMPT.md
_test-fixtures/: VALIDATION.md  _overview.md
_test-fixtures/broken-markers/: AGENTS.md  CLAUDE.md  EXPECTED.md  README.md  pyproject.toml
_test-fixtures/empty-js/: EXPECTED.md  README.md  index.html  package.json  tsconfig.json  vite.config.ts
_test-fixtures/name-collision/: EXPECTED.md  README.md  package.json  tsconfig.json
_test-fixtures/ongoing-python-web/: AGENTS.md  EXPECTED.md  README.md  pyproject.toml
_test-fixtures/ongoing-python-web/.cursor/rules/: python-style.mdc
_test-fixtures/ongoing-python-web/app/: __init__.py  main.py  models.py
_test-fixtures/ongoing-python-web/tests/: test_main.py
_test-fixtures/salesforce-cartridge/: EXPECTED.md  README.md  package.xml  sfdx-project.json
_test-fixtures/upgrade-from-v1/: AGENTS.md  EXPECTED.md  README.md  package.json  tsconfig.json
adapters/: V4-RENDER-RULES-DESIGN.md  _contract.md  _stop-hook.md
adapters/codex/: mcp.md  (+5 more)
core/: _lint.md  install-plan-template.md  install-scope.md
ensemble/: .dockerignore  .env.example  Dockerfile  README.md  RUN.md  bunfig.toml  docker-compose.yml  package.json  tsconfig.json
runtime/: .env.example  .gitignore  README.md  RUN.md  package.json  tsconfig.json
(+246 files in other folders)
